force-app/main/default/objects/Medical_Insurance__c/Medical_Insurance__c.object-meta.xml
<CustomObject>
    <label>Medical Insurance</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Medical Insurance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>