force-app/main/default/objects/Medical_Insurance__c/fields/Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Amount__c</fullName>
    <defaultValue>25000</defaultValue>
    <description>Wysokość ubezpieczenia</description>
    <label>Coverage Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>