force-app/main/default/objects/Medical_Insurance__c/fields/Emergency_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pakiet od nagłych wypadków</description>
    <label>Emergency Coverage</label>
    <type>Checkbox</type>
</CustomField>