force-app/main/default/objects/Medical_Insurance__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Data wygaśnięcia ubezpieczenia</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>