force-app/main/default/objects/Medical_Insurance__c/fields/Insured_Person__c.field-meta.xml
<CustomField>
    <fullName>Insured_Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insured Person</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Person__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Medical Insurances</relationshipLabel>
    <relationshipName>Medical_Insurances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>