force-app/main/default/objects/Medical_Insurance__c/fields/Monthly_Premium__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Premium__c</fullName>
    <defaultValue>230.45</defaultValue>
    <description>Miesięczna składka</description>
    <label>Monthly Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>