force-app/main/default/objects/Medical_Insurance__c/fields/Physical_Therapy_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Physical_Therapy_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pakiet opieki psychologicznej</description>
    <label>Physical Therapy Coverage</label>
    <type>Checkbox</type>
</CustomField>