force-app/main/default/objects/Medical_Insurance__c/validationRules/Start_Date_Cannot_Be_Later_Than_Exp_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Cannot_Be_Later_Than_Exp_date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;  Expiration_Date__c</errorConditionFormula>
    <errorMessage>Data zawarcia polisy nie może być późniejsza niż data jej zakończenia</errorMessage>
</ValidationRule>